--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Title</title>
+	<title>Mashup Project</title>
 	<style>
 		#map {
-			height: 100%;
+			height: 50%;
+		}
+        #weather {
+			height: 50%;
 		}
 		/* Optional: Makes the sample page fill the window. */
 		html, body {
@@ -13,44 +16,62 @@
 			margin: 0;
 			padding: 0;
 		}
-	</style>
+    </style>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgYFOmoJEWPU65OD0eO7x8IPQEJc-KnqY&callback=initMap">
+</script>
 </head>
 <body>
 <div id="map"></div>
+<div id="weather"></div>
 <script>
 	var map;
-	var parks = [
-		{"park":"Yellowstone","coords":[44.4280,-110.5885]},
-		{"park":"Glacier","coords":[48.7596, -113.7870]}
+	var aboutMe = [
+		{"place":"Birth Place","coords":[31.715580,75.642825]},
+		{"place":"School","coords":[31.719377, 75.677829]},
+        {"place":"Java Training","coords":[12.981007, 77.569161]},
+        {"place":"College","coords":[31.368803, 75.600427]},
+        {"place":"Golden Temple","coords":[31.619857, 74.876795]},
+        {"place":"PG Diploma School","coords":[43.773323,-79.335878]}
 		];
 
 	function initMap() {
 		map = new google.maps.Map(document.getElementById('map'), {
-			zoom: 4,
+			zoom: 2,
 			center: new google.maps.LatLng(44, -110),
 			mapTypeId: 'terrain'
 		});
 
-		mashParks(parks);
-	}
+		mashAboutMe(aboutMe);
 
-	function mashParks(results) {
+         //Add listener
+google.maps.event.addListener(map, "click", function (event) {
+    var latitude = event.latLng.lat();
+    var longitude = event.latLng.lng();
+    console.log( latitude + ', ' + longitude );
+}); 
+ 
+	}
+    var marker;
+	function mashAboutMe(results) {
 	for (var i = 0; i < results.length; i++) {
 		var coords = results[i].coords;
 		var latLng = new google.maps.LatLng(coords[0], coords[1]);
-		var marker = new google.maps.Marker({
+		marker = new google.maps.Marker({
 			position: latLng,
 			map: map,
-			label:results[i].park
+			label:results[i].place
 			});
+                  //Add listener
+google.maps.event.addListener(marker, "click", function (event) {
+    var latitude = event.latLng.lat();
+    var longitude = event.latLng.lng();
+    console.log( latitude + ', ' + longitude );
+}); 
 		}
 	}
+ 
 
-
-
-</script>
-<script async defer
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTM5RKrtCLpZAj5HU3K3cTvFNB240NsBg&callback=initMap">
 </script>
 </body>
 </html>
